adding Oauth and login stuff
